Version 0.9.1 of Cloregram